@@ -5,18 +5,22 @@
 
 Hello, 
 
-this a very little description what you have to do to make Gallery >=1.4.3 work with phpBB2 2.0.6 - 2.0.19
+this a very little description what you have to do to make Gallery >=1.4.3 work with phpBB2 2.0.6 - 2.0.22
 
 - Fresh phpBB2 installlation
 
-- upload modules.php into phpBB2/
+- Upload modules.php into phpBB2/
 
-- create phpBB2/modules folder
+- Create phpBB2/modules folder
 
-- go to the this modules folder and create link in modules folder to gallery (or install gallery here)
+-- On *nix with shellaccess:
+  Go to the this modules folder and create link in modules folder to gallery
   - cd phpBB2/modules
   - ln -s /path/to/your/Galleryfolder gallery   (This works only on *nix Systems)
-  
+
+-- On other constellations:
+   Go to the this modules folder and install gallery here
+
 - modify phpBB2 code 
 	see phpBB2-manual_changes.txt
 
